<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.platform.game.MainActivity">

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:gravity="center"
        android:visibility="invisible"
        tools:text="2:00" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="invisible"
        tools:ignore="RelativeOverlap"
        tools:text="0" />

    <TextView
        android:id="@+id/announcement_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone"
        tools:text="You won!"
        tools:textColor="#10c310" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/image2"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image4"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/image1"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/image4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/image3"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/play"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/pauseLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/pauseLayout"
        android:orientation="vertical">

        <Button
            android:id="@+id/resumeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/pause_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pause"
        android:scaleType="fitCenter"
        android:src="@drawable/pause" />


</RelativeLayout>
